correctly align activity feed open and close icons

--- a/opentech/static_src/src/sass/apply/components/_link.scss
+++ b/opentech/static_src/src/sass/apply/components/_link.scss
@@ -133,11 +133,13 @@
                 height: 30px;
                 margin-left: 30px;
                 font-size: 30px;
-                line-height: .9;
-                text-align: center;
                 border: 2px solid $color--white;
                 border-radius: 50%;
                 content: '+';
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding-bottom: 4px;
             }
         }
 
@@ -166,11 +168,13 @@
             height: 30px;
             margin-left: 10px;
             font-size: 30px;
-            line-height: .1;
-            text-align: center;
             border: 2px solid $color--white;
             border-radius: 50%;
-            content: '_';
+            content: '\2013';
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-bottom: 5px;
 
             @include media-query(tablet-portrait) {
                 margin-left: 20px;
